# datekeeper

./: .pre-commit-config.yaml  pyproject.toml
src/datekeeper/: main.py  settings.py
src/datekeeper/api/: main.py
src/datekeeper/api/routers/: debug.py  webhook.py
src/datekeeper/bot/: main.py
src/datekeeper/bot/routers/: greetings.py
src/datekeeper/infrastructure/: di.py
